[kafka_docker]Improve producer and consumer in Java